<resources>
    <string name="app_name">Tank Trouble</string>

    <!-- Bluetooth Activity -->
<!--    <string name="bluetooth_absent">Device is not supported</string>-->
<!--    <string name="bluetooth_request">Enabled bluetooth required</string>-->
<!--    <string name="device_chooser_header">Device list</string>-->
<!--    <string name="scan_for_devices">Scan for devices</string>-->
<!--    <string name="scanning_for_devices">Scanning…</string>-->
<!--    <string name="n_devices_found_suffix">devices found</string>-->
<!--    <string name="enable_discoverable">Make discoverable</string>-->
<!--    <string name="not_connected">Not connected</string>-->
<!--    <string name="wait_for_server">Waiting for server to configure game…</string>-->
    <!-- Chat -->
    <string name="send">Send</string>
    <string name="close">Close</string>
    <string name="tank_color">Tank Color</string>
    <string name="color_orange">Orange</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_red">Red</string>
    <string name="accept">Accept</string>

    <string name="std_bluetooth_menu">Bluetooth Menu</string>
    <string name="std_paired_devices">Paired Devices:</string>
    <string name="std_near_devices">Near Devices:</string>
    <string name="std_turn_on">Turn On</string>
    <string name="std_turn_off">Turn Off</string>
    <string name="std_make_visible">Make Visible</string>
    <string name="std_list_paired">List Paired Devices</string>
    <string name="std_list_near">List Near Devices</string>

    <!-- Main Activity - Welcome Screen -->
<!--    <string name="str_host">Host</string>-->
<!--    <string name="str_join">Join</string>-->
    <string name="bt_game">Start Game</string>
    <string name="str_settings">Settings</string>
    <string name="str_back_to_menu">Back To Menu</string>

    <!-- Settings Activity -->
    <string name="str_username">Username</string>
    <string name="str_randomize">Randomize Username</string>
    <string name="str_save">Save</string>
    <string name="str_cancel">Cancel</string>

    <!-- Host Activity -->
    <string name="str_start_game">Start Game</string>
    <string name="str_no_id_set">No ID set</string>
    <string name="str_no_player_ready">No Players Ready</string>

    <!-- Join Activity -->
    <string name="str_game_pin">Game PIN</string>
    <string name="str_enter">Enter</string>

    <!-- Wait Activity -->
    <string name="str_you_re_in">You\'re In!</string>
    <string name="str_waiting">Waiting for the game to start …</string>

</resources>
