<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".match.BluetoothActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/std_bluetooth_menu"
        android:textSize="30sp" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:onClick="on"
        android:text="@string/std_turn_on" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:onClick="off"
        android:text="@string/std_turn_off" />


    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:onClick="visible"
        android:text="@string/std_make_visible" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:onClick="listPairedDevice"
        android:text="@string/std_list_paired" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:onClick="findDevices"
        android:text="@string/std_list_near" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/std_paired_devices"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/bluetoothPairedListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/std_near_devices"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/bluetoothNearListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />




</LinearLayout>